# projeto-hack-meridian

./: README.md
api/: .gitignore  API_EXAMPLES.md  Cargo.toml  Dockerfile  Makefile  README.md  README_pt.md  config.example  env.example  test_api.sh
api/src/: blockchain.rs  handlers.rs  main.rs  models.rs  routes.rs
contracts/: Cargo.toml
contracts/src/: Attorneycoin.rs  BondAmortization.rs  BondStorage.rs  PaymentPool.rs  SubsequentMarket.rs  TokenCustody.rs  TokenMinting.rs  lib.rs
docs/: deploy.txt
frontend/: package-lock.json  package.json
frontend/assets/: documentation.module.css  landingpage.module.css
frontend/src/: App.tsx  bondstorageresources.tsx  bottomnav.tsx  dashboardresources.tsx  faucet.tsx  global.css  landingpage.css  landingpage.tsx  main.tsx  paymentpoolresources.tsx  vite-env.d.ts
frontend/src/soroban-services/: bondStorageService.ts  dashboardService.ts  faucetService.ts  paymentPoolService.ts
web3/debenture/: Cargo.toml
web3/debenture/contracts/attorneycoin/: Cargo.toml
web3/debenture/contracts/bond_storage/: Cargo.toml
web3/debenture/contracts/payment_pool/: Cargo.toml
web3/debenture/contracts/payment_pool/src/: lib.rs  payment_pool.rs
web3/debenture/contracts/token_custody/: Cargo.toml
web3/debenture/contracts/token_minting/: Cargo.toml
web3/debenture/contracts/token_minting/src/: lib.rs  token_minting.rs
web3/debenture/interface/attorneycoin/: README.md  package.json
web3/debenture/interface/bond_storage/: README.md  package.json
web3/debenture/interface/payment_pool/: README.md  package.json
web3/debenture/interface/token_custody/: README.md  package.json
web3/debenture/interface/token_minting/: README.md  package.json
(+15 files in other folders)
