[package]
name = "payment_pool"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
token_minting = { path = "../token_minting" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
