[package]
name = "token_minting"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
bond_storage = { path = "../bond_storage" }
token_custody = { path = "../token_custody" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
